@@ -1,15 +1,24 @@
 package com.nesesan.chatop.service;
 
+import com.nesesan.chatop.Exceptions.ResourceNotFoundException;
+import com.nesesan.chatop.Exceptions.UnauthorizedException;
+import com.nesesan.chatop.dto.rental.RentalRequestDTO;
+import com.nesesan.chatop.dto.rental.RentalResponseDTO;
 import com.nesesan.chatop.model.Rental;
 import com.nesesan.chatop.model.User;
 import com.nesesan.chatop.repository.RentalRepository;
-import com.nesesan.chatop.request.RentalRequest;
+import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
 
+import java.io.IOException;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
+
 @Service
 public class RentalService {
 
@@ -17,59 +26,120 @@ public class RentalService {
     private final UserService userService;
     private final CloudinaryService cloudinaryService;
 
-    public RentalService(RentalRepository rentalRepository, UserService userService, CloudinaryService cloudinaryService) {
+    public RentalService(RentalRepository rentalRepository,
+                         UserService userService,
+                         CloudinaryService cloudinaryService) {
         this.rentalRepository = rentalRepository;
         this.userService = userService;
         this.cloudinaryService = cloudinaryService;
     }
 
-    public Map<String, List<Rental>> getAllRentals(){
-        List<Rental> rentals = rentalRepository.findAll().stream() .toList();
+    public Map<String, List<RentalResponseDTO>> getAllRentals() {
+        List<RentalResponseDTO> rentals = rentalRepository.findAll().stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
 
-        Map<String, List<Rental>> response = new HashMap<>();
-        response.put("rentals", rentals);
-
+        Map<String, List<RentalResponseDTO>> response = new HashMap<>();
+        response.put("rentals", rentals); // Encapsuler dans la clé "rentals"
         return response;
     }
-    public Optional<Rental> getRentalById(Integer id){
+
+    private RentalResponseDTO convertToDTO(Rental rental) {
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy/MM/dd");
+
+        return new RentalResponseDTO(
+                rental.getId(),
+                rental.getName(),
+                rental.getSurface(),
+                rental.getPrice(),
+                rental.getPicture(),
+                rental.getDescription(),
+                rental.getOwnerId(),
+                rental.getCreatedAt(),
+                rental.getUpdatedAt(),
+                "Rental updated successfully");
+    }
+
+    public Optional<Rental> getRentalById(Integer id) {
         return rentalRepository.findById(id);
     }
 
-    public Rental createRental(Rental rental, String userEmail) throws Exception {
-        if (userEmail == null || userEmail.isEmpty()) {
-            throw new Exception("User not found");
-        }
-        User user = userService.findByEmail(userEmail);
+    public RentalResponseDTO createRental(RentalRequestDTO rentalRequestDTO, String userEmail) throws IOException {
+        User user = userService.findByEmail(userEmail)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
-        Rental newRental = new Rental();
-        newRental.setName(rental.getName());
-        newRental.setSurface(rental.getSurface());
-        newRental.setPrice(rental.getPrice());
-        newRental.setDescription(rental.getDescription());
-        newRental.setOwnerId(user.getId());
-        newRental.setCreatedAt(newRental.getCreatedAt());
-        newRental.setUpdatedAt(newRental.getUpdatedAt());
+        Rental rental = new Rental();
+        rental.setName(rentalRequestDTO.getName());
+        rental.setSurface(rentalRequestDTO.getSurface());
+        rental.setPrice(rentalRequestDTO.getPrice());
+        rental.setDescription(rentalRequestDTO.getDescription());
+        rental.setOwnerId(Math.toIntExact(user.getId()));
 
-        if (newRental.getPicture() != null && !newRental.getPicture().isEmpty()) {
-            String pictureUrl = cloudinaryService.uploadFile(newRental.getPicture());
-            newRental.setPicture(pictureUrl);
+        if (rentalRequestDTO.getPicture() != null && !rentalRequestDTO.getPicture().isEmpty()) {
+            String pictureUrl = cloudinaryService.uploadFile(rentalRequestDTO.getPicture());
+            rental.setPicture(pictureUrl);
         }
 
-        return rentalRepository.save(rental);
-    };
+        Rental createdRental = rentalRepository.save(rental);
 
+        return new RentalResponseDTO(
+                createdRental.getId(),
+                createdRental.getName(),
+                createdRental.getSurface(),
+                createdRental.getPrice(),
+                createdRental.getPicture(),
+                createdRental.getDescription(),
+                createdRental.getOwnerId(),
+                createdRental.getCreatedAt(),
+                createdRental.getUpdatedAt(),
+                "Rental created!"
+        );
 
+    }
 
-    public Rental updateRental(Integer id, RentalRequest rentalRequest) throws Exception{
-       Rental rental = getRentalById(id)
-               .orElseThrow(()-> new IllegalArgumentException("Rental not found"));
+    @Transactional
+    public RentalResponseDTO updateRental(Integer id, RentalRequestDTO rentalRequestDTO) {
+        Rental rental = getRentalById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Rental not found"));
 
-       rental.setName(rentalRequest.getName());
-       rental.setSurface(rentalRequest.getSurface());
-       rental.setPrice(rentalRequest.getPrice());
-       rental.setDescription(rentalRequest.getDescription());
-       rental.setUpdatedAt(rental.getUpdatedAt());
+        rental.setName(rentalRequestDTO.getName());
+        rental.setSurface(rentalRequestDTO.getSurface());
+        rental.setPrice(rentalRequestDTO.getPrice());
+        rental.setDescription(rentalRequestDTO.getDescription());
+        rental.setUpdatedAt(LocalDateTime.now());
 
-        return rentalRepository.save(rental);
+        Rental updatedRental = rentalRepository.save(rental);
+
+        return new RentalResponseDTO(
+                updatedRental.getId(),
+                updatedRental.getName(),
+                updatedRental.getSurface(),
+                updatedRental.getPrice(),
+                updatedRental.getPicture(),
+                updatedRental.getDescription(),
+                updatedRental.getOwnerId(),
+                updatedRental.getCreatedAt(),
+                updatedRental.getUpdatedAt(),
+                "Rental updated!"
+        );
+    }
+
+    public RentalResponseDTO getRentalDTOById(Integer id) {
+        Rental rental = getRentalById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Rental not found"));
+
+        return convertToDTO(rental);
+    }
+
+    public void verifyOwnership(Integer rentalId, String email) {
+        Rental rental = getRentalById(rentalId)
+                .orElseThrow(() -> new ResourceNotFoundException("Rental not found"));
+
+        User user = userService.findByEmail(email)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+
+        if (!(rental.getOwnerId() == user.getId().intValue())) {
+            throw new UnauthorizedException("Vous n'êtes pas autorisé à modifier ce rental");
+        }
     }
 }
